[package]
name = "rnga"
version = "0.2.0"
edition = "2021"
description = "艾泽拉斯国家地理: NGA Client Library in Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/peitaosu/rNGA"
keywords = ["NGA", "BBS", "forum", "client"]
categories = ["api-bindings"]

[dependencies]
# Async runtime
tokio = { workspace = true }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip"] }

# Serialization
serde = { workspace = true }
serde_json = "1"

# Error handling
thiserror = "2"

# Async trait support
async-trait = "0.1"

# URL handling
url = "2"

# Logging
log = "0.4"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# HTML/XML handling
html-escape = "0.2"
sxd-document = "0.3"
sxd-xpath = "0.4"

# Regex
regex = "1"
lazy_static = "1"

# Encoding
encoding_rs = "0.8"

[dev-dependencies]
pretty_assertions = "1"
dotenv = "0.15"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]
